--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<h2>Home Profile!</h2>
+
+<ul>
+  <li>{{link-to 'Home' 'index'}}</li>
+  <li>{{link-to 'HomeProfile' 'homeProfiles/homeProfile'}}</li>
+</ul>
+
+<hr>
 
 {{outlet}}
