Wrapping up connection to Rails back-end.  Displaying information     in the most rudimentary form possible.  Next:  localization.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,9 +2,9 @@
 
 <ul>
   <li>{{link-to 'Home' 'index'}}</li>
-  <li>{{link-to 'HomeProfile' 'homeProfiles/homeProfile'}}</li>
+  <li>{{link-to 'HomeProfile' 'home-profile'}}</li>
 </ul>
 
 <hr>
-
 {{outlet}}
+<hr>
