--- a/app/templates/home-profile.hbs
+++ b/app/templates/home-profile.hbs
@@ -1,161 +1,23 @@
 <div id='home-screen'>
   <fieldset>
     <legend>
-      {{ t("home_profile.home_screen.headings.building") }}
+      {{i-n 'home_profile.home_screen.headings.building'}}
     </legend>
     <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "dwelling_type") }}
+      {{i18n-label target='dwelling_type' translationKey='home_profile.dwelling_type'}}
       <div class='input'>
+        {{view "i18n-select" translationKey='select.dwelling_type' value=model.dwellingType prompt=' '}}
+{{!--
         {{ select_tag("dwelling_type", options_for_location_profile("dwelling_type"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "year_built") }}
-      <div class='input'>
-        {{ select_tag("year_built", options_for_select("[2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001, 2000, 1999, 1998, 1997, 1996, 1995, 1994, 1993, 1992, 1991, 1990, 1989, 1988, 1987, 1986, 1985, 1984, 1983, 1982, 1981, 1980, 1979, 1978, 1977, 1976, 1975, 1974, 1973, 1972, 1971, 1970, 1969, 1968, 1967, 1966, 1965, 1964, 1963, 1962, 1961, 1960, 1959, 1958, 1957, 1956, 1955, 1954, 1953, 1952, 1951, 1950, 1949, 1948, 1947, 1946, 1945, 1944, 1943, 1942, 1941, 1940, 1939, 1938, 1937, 1936, 1935, 1934, 1933, 1932, 1931, 1930, 1929, 1928, 1927, 1926, 1925, 1924, 1923, 1922, 1921, 1920, 1919, 1918, 1917, 1916, 1915, 1914, 1913, 1912, 1911, 1910, 1909, 1908, 1907, 1906, 1905, 1904, 1903, 1902, 1901, 1900, 1899, 1898, 1897, 1896, 1895, 1894, 1893, 1892, 1891, 1890, 1889, 1888, 1887, 1886, 1885, 1884, 1883, 1882, 1881, 1880, 1879, 1878, 1877, 1876, 1875, 1874, 1873, 1872, 1871, 1870, 1869, 1868, 1867, 1866, 1865, 1864, 1863, 1862, 1861, 1860, 1859, 1858, 1857, 1856, 1855, 1854, 1853, 1852, 1851, 1850, 1849, 1848, 1847, 1846, 1845, 1844, 1843, 1842, 1841, 1840, 1839, 1838, 1837, 1836, 1835, 1834, 1833, 1832, 1831, 1830, 1829, 1828, 1827, 1826, 1825, 1824, 1823, 1822, 1821, 1820, 1819, 1818, 1817, 1816, 1815, 1814, 1813, 1812, 1811, 1810, 1809, 1808, 1807, 1806, 1805, 1804, 1803, 1802, 1801]"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ label_tag("square_footage") }}
-      <div class='input'>
-        <div class='home-size-slider'>
-          <!-- %input#home-size-slider-input{type: "text", name: 'square_footage', data: {'slider-min' => TENANT_CONFIG['HOME_SIZE_SLIDER_MIN'], 'slider-max' => TENANT_CONFIG['HOME_SIZE_SLIDER_MAX'], 'slider-step' => 50, 'slider-tooltip' => 'always', 'slider-selection' => 'none'}} -->
-        </div>
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.household") }}
-    </legend>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "number_of_adults") }}
-      <div class='input'>
-        {{ select_tag("number_of_adults", options_for_select("1..10"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "number_of_children") }}
-      <div class='input'>
-        {{ select_tag("number_of_children", options_for_select("0..10"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "home_business") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("home_business_true") }}
-          {{ label_tag("home_business_false") }}
-        </div>
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "ownership") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("ownership_rent") }}
-          {{ label_tag("ownership_own") }}
-        </div>
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.heating") }}
-    </legend>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "hvac_heating_config") }}
-      <div class='input'>
-        {{ select_tag("hvac_heating_config", options_for_location_profile("hvac_heating_config"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.cooling") }}
-    </legend>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "hvac_cooling_config") }}
-      <div class='input'>
-        {{ select_tag("hvac_cooling_config", options_for_location_profile("hvac_cooling_config"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.thermostat") }}
-    </legend>
-    <div class='field clearfix has-thermo-js'>
-      {{ i18n_label_tag("home_profile", "programmable_tstat") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("programmable_tstat_true") }}
-          {{ label_tag("programmable_tstat_false") }}
-        </div>
-      </div>
-    </div>
-    <div class='field clearfix has-thermo-hide-js hide'>
-      {{ i18n_label_tag("home_profile", "tstat_programmed") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("tstat_programmed_true") }}
-          {{ label_tag("tstat_programmed_false") }}
-        </div>
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "cooling_setpoint") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("avg_cooling_setpoint") }}
-        </div>
-      </div>
-    </div>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "heating_setpoint") }}
-      <div class='input'>
-        <div class='inputs-list'>
-          {{ label_tag("avg_heating_setpoint") }}
-        </div>
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.water_heating") }}
-    </legend>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "water_heater_type") }}
-      <div class='input'>
-        {{ select_tag("water_heater_type", options_for_location_profile("water_heater_type"), "{:include_blank=>true}") }}
-      </div>
-    </div>
-  </fieldset>
-  <fieldset>
-    <legend>
-      {{ t("home_profile.home_screen.headings.other") }}
-    </legend>
-    <div class='field clearfix'>
-      {{ i18n_label_tag("home_profile", "other") }}
-      <div class='input has-pool-js'>
-        {{ label_tag("pool_pump_checkbox") }}
-      </div>
-      <div class='input'>
-        {{ label_tag("hot_tub_checkbox") }}
-      </div>
-    </div>
-    <div class='field clearfix has-pool-hide-js hide'>
-      {{ i18n_label_tag("home_profile", "pool_heat_type") }}
-      <div class='input'>
-        {{ select_tag("pool_heat_type", options_for_location_profile("pool_heat_type"), "{:include_blank=>true}") }}
-      </div>
+ --}}      </div>
     </div>
   </fieldset>
 </div>
 
 
-{{dwelling_type}}
-{{year_built}}
+{{model.dwellingType}}
+{{yearBuilt}}
+**{{model.autoSaveAttributes}}**
 {{square_footage}}
 {{number_of_adults}}
 {{number_of_children}}
