--- a/app/templates/home-profile.hbs
+++ b/app/templates/home-profile.hbs
@@ -1,57 +1,29 @@
-<div id='home-screen'>
-  <fieldset>
-    <legend>
-      {{i-n 'home_profile.home_screen.headings.building'}}
-    </legend>
-    <div class='field clearfix'>
-      {{i18n-label target='dwelling_type' translationKey='home_profile.dwelling_type'}}
-      <div class='input'>
-        {{view "i18n-select" translationKey='select.dwelling_type' value=model.dwellingType prompt=' '}}
-{{!--
-        {{ select_tag("dwelling_type", options_for_location_profile("dwelling_type"), "{:include_blank=>true}") }}
- --}}      </div>
-    </div>
-  </fieldset>
-</div>
-
-
-{{model.dwellingType}}
-{{yearBuilt}}
-**{{model.autoSaveAttributes}}**
-{{square_footage}}
-{{number_of_adults}}
-{{number_of_children}}
-{{home_business}}
-{{ownership}}
-{{hvac_heating_config}}
-{{hvac_cooling_config}}
-{{programmable_tstat}}
-{{tstat_programmed}}
-{{water_heater_type}}
-{{pool_pump}}
-{{hot_tub}}
-{{pool_heat_type}}
-{{avg_cooling_setpoint}}
-{{avg_heating_setpoint}}
-{{x_refrigerator}}
-{{x_freezer}}
-{{x_dish_washer}}
-{{oven}}
-{{cooktop}}
-{{x_washing_machine}}
-{{clothes_dryer}}
-{{x_num_tvs}}
-{{x_tv_estar}}
-{{x_tv_hours}}
-{{num_laptops}}
-{{solar_electric}}
-{{num_incandescent}}
-{{hours_incandescent}}
-{{num_cfl}}
-{{hours_cfl}}
-{{num_led}}
-{{hours_led}}
-{{num_flourescent}}
-{{hours_flourescent}}
-{{num_halogen}}
-{{hours_halogen}}
+<form class='survey'>
+  <div id='home-screen'>
+    <fieldset>
+      <legend>
+        {{i-n 'home_profile.home_screen.headings.building'}}
+      </legend>
+      <div class='field clearfix'>
+        {{i18n-label target='dwelling-type' translationKey='home_profile.dwelling_type'}}
+        <div class='input'>
+          {{view "i18n-select" id="dwelling-type" translationKey='select.dwelling_type' value=model.dwellingType prompt=' '}}
+        </div>
+      </div>
+      <div class='field clearfix'>
+        {{ i18n-label target='year-built' translationKey='home_profile.year_built' }}
+        <div class='input'>
+          {{view 'select' id='year-built' prompt=' ' content=homeYears }}
+        </div>
+      </div>
+      <div class='field clearfix'>
+        {{ i18n-label target='square-footage' translationKey='home_profile.square_footage' }}
+        <div class='input'>
+          <div class='home-size-slider'>
+            {{ bootstrap-slider id='square-footage' type='text' min=50 max=10000 step=50 tooltip='always' selection='none' sliderDidChange="sliderUpdate" formatter=homeSizeFormatter}}
+          </div>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+</form>
